Fix how ratings are display on small devices.
The Washington Post pinocchio images can be pretty wide, so we can't
really display them. One solution might be to use the 2x2 layout like
on the Share the Facts widget.

--- a/themes/factopolis/static/css/style.css
+++ b/themes/factopolis/static/css/style.css
@@ -501,8 +501,16 @@ ul.pagination > li.disabled > a {
   content: "— ";
 }
 
-.statement-check-full-source-img {
-  display: flex;
+@media screen and (max-width: 767px) {
+  .statement-check-full-source-img-rating {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .statement-check-full-source-img {
+    display: flex;
+  }
 }
 
 .statement-check-full-source-img img {
